# stockRadarSystem

./: .dockerignore  .gitignore  Makefile  Tiltfile
backend/: .env.example  .env.template  Dockerfile_dev  Dockerfile_prod  alembic.ini  docker-entrypoint_dev.sh  docker-entrypoint_prod.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_sprint9_ml_columns.py  eccb39e7875c_initial_schema_in_stock_radar.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/broker/: __init__.py  ibkr_broker.py  interface.py  mock_broker.py
backend/app/core/: config.py  database.py  logging.py
backend/app/data/: __init__.py  tick_buffer.py
backend/app/engine/: signal_detector.py  trade_executor.py  universe_filter.py
backend/app/ml/: __init__.py  analytics.py  backtest.py  features.py  model.py  scorer.py  trainer.py
backend/app/models/: __init__.py  signal.py  symbol.py  trade.py
backend/app/risk/: __init__.py  risk_manager.py
backend/app/schemas/: ml.py  signal.py  symbol.py  trade.py
backend/scripts/: backfill_signal_links.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_backtest.py  test_ibkr_broker.py  test_ml_model.py  test_ml_scorer.py  test_mock_broker.py  test_risk_manager.py  test_signal_detector.py  test_tick_buffer.py  test_trade_executor.py  test_universe_filter.py
frontend/: Dockerfile_dev  Dockerfile_prod  angular.json  nginx.conf  package-lock.json  package.json
kubernetes/: namespace.yaml  svcdeployer-token.yaml
ng-guide/: 00-Playbook-Index.md  15-IDE-Setup.md  (+18 more)
(+151 files in other folders)
