[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-radar-system"
version = "0.1.0"
description = "AI-Powered Real-Time NASDAQ Breakout Detection & Execution Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "websockets>=14.1",
    "apscheduler>=3.10.4",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
ml = [
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
]
ibkr = [
    "ib_insync>=0.9.86",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100
